--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -35,7 +35,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-  cursor: url("/hand-pointer.svg"), auto; /* Custom cursor */
+  cursor: url("/personal-website-nextjs/hand-pointer.svg"), auto; /* Custom cursor */
 }
 
 @media (prefers-color-scheme: dark) {
