--- a/my-app/src/app/projects/page.module.css
+++ b/my-app/src/app/projects/page.module.css
@@ -404,7 +404,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add subtle shadow */
   margin: 1rem;
   margin-right: 3rem;
-  cursor: url('/hand-pointer.svg'), auto; /* Show pointer cursor on hover */
+  cursor: url("/hand-pointer.svg"), auto; /* Show pointer cursor on hover */
   transition: transform 0.2s ease; /* Smooth scaling effect */
 }
 
