--- a/my-app/src/app/contact/contact.module.css
+++ b/my-app/src/app/contact/contact.module.css
@@ -36,7 +36,7 @@
 
 .logo {
   max-height: 40px;
-  cursor: url("/hand-pointer.svg"), auto; /* Custom cursor */
+  cursor: url("/personal-website-nextjs/hand-pointer.svg"), auto; /* Custom cursor */
 }
 
 .navList {
@@ -57,7 +57,7 @@
   font-weight: 500;
   font-size: 0.9rem;
   transition: color 0.3s ease;
-  cursor: url("/hand-pointer.svg"), auto; /* Custom cursor */
+  cursor: url("/personal-website-nextjs/hand-pointer.svg"), auto; /* Custom cursor */
 }
 
 .navLink:hover {
@@ -386,7 +386,7 @@
 .formContainer button:hover {
   background-color: #ffd700;
   font: 1rem 'JetBrains Mono', monospace; /* Custom font */
-  cursor: url("/hand-pointer.svg"), auto; /* Custom cursor */
+  cursor: url("/personal-website-nextjs/hand-pointer.svg"), auto; /* Custom cursor */
 }
 
 
