fixed relative path issue

--- a/my-app/src/app/about/about.module.css
+++ b/my-app/src/app/about/about.module.css
@@ -36,7 +36,7 @@
 
 .logo {
   max-height: 40px;
-  cursor: url("/personal-website-nextjs/hand-pointer.svg"), auto; /* Custom cursor */
+  cursor: url("/hand-pointer.svg"), auto; /* Custom cursor */
 }
 
 .navList {
@@ -57,7 +57,7 @@
   font-weight: 500;
   font-size: 0.9rem;
   transition: color 0.3s ease;
-  cursor: url("/personal-website-nextjs/hand-pointer.svg"), auto; /* Custom cursor */
+  cursor: url("/hand-pointer.svg"), auto; /* Custom cursor */
 }
 
 .navLink:hover {
