--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'JetBrains Mono';
-  src: url('/personal-website-nextjs/JetBrainsMono-ExtraBold.ttf') format('woff2'),
-       url('/personal-website-nextjs/JetBrainsMono-ExtraBold.ttf') format('woff');
+  src: url('/JetBrainsMono-ExtraBold.ttf') format('woff2'),
+       url('/JetBrainsMono-ExtraBold.ttf') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap; /* Ensures fallback text is shown until the font is loaded */
@@ -9,8 +9,8 @@
 
 @font-face {
   font-family: 'JetBrains Mono';
-  src: url('/personal-website-nextjs/JetBrainsMono-Bold.ttf') format('woff2'),
-       url('/personal-website-nextjs/JetBrainsMono-Bold.ttf') format('woff');
+  src: url('/JetBrainsMono-Bold.ttf') format('woff2'),
+       url('/JetBrainsMono-Bold.ttf') format('woff');
   font-weight: 700;
   font-style: normal;
 }
@@ -46,13 +46,13 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  cursor: url("/personal-website-nextjs/arrowhead-rounded-outline.svg"), auto; /* Custom cursor */
+  cursor: url("/arrowhead-rounded-outline.svg"), auto; /* Custom cursor */
 }
 
 a {
   color: inherit;
   text-decoration: none;
-  cursor: url("/personal-website-nextjs/hand-pointer.svg"), auto; /* Custom cursor */
+  cursor: url("/hand-pointer.svg"), auto; /* Custom cursor */
 }
 
 @media (prefers-color-scheme: dark) {
