--- a/my-app/src/app/page.module.css
+++ b/my-app/src/app/page.module.css
@@ -106,3 +106,10 @@
     transform: rotate(360deg);
   }
 }
+
+.splineContainer canvas {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Adjust the Spline object to cover the screen */
+}
